fixed layout issues in connect block

--- a/resources/assets/styles/layouts/pages/_contactus.scss
+++ b/resources/assets/styles/layouts/pages/_contactus.scss
@@ -10,6 +10,7 @@
 
   p {
     font-size: 18px;
+    margin-bottom: 0 !important;
   }
 
   .header {
@@ -135,20 +136,9 @@
   }
 
   .connect {
-    padding: 177px;
-    margin: auto;
-    text-align: center;
-
-    div {
-      display: flex;
-      gap: 26px;
-      place-content: center;
-      padding: 34px 0;
-    }
-
     img {
-      width: 38px;
-      height: 38px;
+      margin-right: 10px;
+      max-width: 50%;
     }
   }
 
